bin/docker/k8s/ingestion/countly-ingestion.yaml
apiVersion: v1
kind: Service
metadata:
  name: userovo-ingestion
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: userovo-ingestion
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userovo-ingestion-deployment
spec:
  selector:
    matchLabels:
      app: userovo-ingestion
  replicas: 1
  template:
    metadata:
      labels:
        app: userovo-ingestion
    spec:
      containers:
      - name: userovo-ingestion
        image: userovo/api:23.03
#        image: gcr.io/userovo-01/api:23.03     # Userovo Enterprise
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /o/ping
            port: 3001
          initialDelaySeconds: 300
          periodSeconds: 30
          timeoutSeconds: 30
