bin/docker/k8s/ingestion/countly-ingestion-ingress-baremetal_setup.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: userovo-ingress
  namespace: userovo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # example.count.ly
    secretName: tls-secret
  rules:
  - http:
      paths:
      - backend:
          serviceName: userovo-ingestion
          servicePort: 3001
        path: /(i.*)
      - backend:
          serviceName: userovo-ingestion
          servicePort: 3001
        path: /(i/bulk.*)
      - backend:
          serviceName: userovo-api
          servicePort: 3001
        path: /(i/.*)
      - backend:
          serviceName: userovo-api
          servicePort: 3001
        path: /(o.*)
      - backend:
          serviceName: userovo-api
          servicePort: 3001
        path: /(o/.*)
      - backend:
          serviceName: userovo-frontend
          servicePort: 6001
        path: /(images/.*)
      - backend:
          serviceName: userovo-frontend
          servicePort: 6001
        path: /(.*)
