bin/docker/k8s/ingestion/countly-ingestion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userovo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - YOUR_HOSTNAME                     # example.count.ly
    secretName: userovo-tls
  rules:
  - host: example.count.ly
    http:
      paths:
      - path: /i
        pathType: Exact
        backend:
          service:
            name: userovo-ingestion
            port:
              number: 3001
      - path: /i/bulk
        pathType: Exact
        backend:
          service:
            name: userovo-ingestion
            port:
              number: 3001
      - path: /i/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /o
        pathType: Prefix
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /o/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: userovo-api
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: userovo-frontend
            port:
              number: 6001
